@@ -17,17 +17,18 @@ app_generators/daemon_kit/templates/config/environments/test.rb
 app_generators/daemon_kit/templates/config/initializers/readme
 app_generators/daemon_kit/templates/libexec/daemon.erb
 bin/daemon_kit
-config/website.yml.sample
+daemon_generators/cron/USAGE
+daemon_generators/cron/cron_generator.rb
+daemon_generators/cron/templates/config/initializers/cron.rb
+daemon_generators/cron/templates/libexec/daemon.rb
 daemon_generators/jabber/USAGE
 daemon_generators/jabber/jabber_generator.rb
 daemon_generators/jabber/templates/config/initializers/jabber.rb
 daemon_generators/jabber/templates/config/jabber.yml
 daemon_generators/jabber/templates/libexec/daemon.rb
-features/development.feature
-features/steps/common.rb
-features/steps/env.rb
 lib/daemon_kit.rb
 lib/daemon_kit/application.rb
+lib/daemon_kit/cron.rb
 lib/daemon_kit/initializer.rb
 lib/daemon_kit/jabber.rb
 lib/daemon_kit/patches/force_kill_wait.rb
@@ -48,11 +49,7 @@ spec/initializer_spec.rb
 spec/spec.opts
 spec/spec_helper.rb
 tasks/rspec.rake
+test/test_cron_generator.rb
 test/test_daemon-kit_generator.rb
 test/test_generator_helper.rb
 test/test_jabber_generator.rb
-website/index.html
-website/index.txt
-website/javascripts/rounded_corners_lite.inc.js
-website/stylesheets/screen.css
-website/template.html.erb
