@@ -35,15 +35,27 @@ Currently only two generators exist, a 'default' generator and a 'jabber' genera
 
 The default generator creates a simple daemon with an infinite loop inside that you can adapt.
 
+h3. Jabber Generator
+
 The jabber generator creates a simple daemon that leverages the "xmpp4r-simple":http://xmpp4r-simple.rubyforge.org/ gem to process inbound messages. The daemon will manage the roster and other little tasks, leaving you to provide the hooks for processing messages, presence notifications and subscription request.
+
+h3. Cron Generator
+
+The cron generator creates a simple daemon that leverages the "rufus-scheduler":http://github.com/jmettraux/rufus-scheduler gem to create a simple cron-lie daemon. Please be aware that this daemon could never be a replacement for the battle-tested "cron utility":http://www.gentoo.org/doc/en/cron-guide.xml shipped standard with most *nix distributions.
 
 h2. Requirements
 
 * Ruby 1.8.6
 * daemons 1.0.10
-* xmpp4r-simple 0.8.8 (if using the 'jabber' generator)
-* eventmachine 0.12.2 (if using any of the evented generators)
 * rspec 1.1.11 (for writing/running your specs)
+
+h3. Generator Requirements
+
+Depending on the generator you choose for your daemon, it might require additional gems to run.
+
+|.Generator|.Dependencies|
+|jabber|* "xmpp4r-simple":http://xmpp4r-simple.rubyforge.org/|
+|cron|* "rufus-scheduler":http://github.com/jmettraux/rufus-scheduler|
 
 h2. Install
 
