@@ -1,0 +1,8 @@
+begin
+  require 'rufus-scheduler'
+rescue LoadError => e
+  $stderr.puts "Missing rufus-scheduler gem. Please run 'gem install rufus-scheduler'."
+  exit 1
+end
+
+require 'daemon_kit/cron'
